# CrimsonDesert-Inventory-and-Player-Editor

./: CMakeLists.txt  README.md  Trainer.slnx  imgui.ini
Trainer/: Crimson desert trainer.vcxproj
src/: TrainerPanel.cpp  TrainerPanel.h  main.cpp  resource.h  trainer_ui.rc
